# Server-View-2

./: .gitignore  AGENTS.md  README.md  Server-View-Plan.md  implementation_plan.md  spec.md  start.bat  start.sh
backend/: pyproject.toml
backend/app/: __init__.py  __main__.py  main.py  models.py  scanner.py  tray.py  websocket.py
backend/tests/: test_api.py  test_scanner.py  test_tray.py  test_websocket.py
docs/: REVIEW_FINDINGS.md  future-plans.md
docs/superpowers/plans/: 2026-07-13-signal-deck-dashboard-overhaul.md
docs/superpowers/specs/: 2026-07-13-signal-deck-dashboard-overhaul-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  processUtils.test.ts  processUtils.ts  styles.css  types.ts
frontend/src/components/: ConfirmStopDialog.tsx  DashboardChrome.tsx  ProcessTable.tsx
