[project]
name = "server-view-backend"
version = "0.1.0"
description = "Local FastAPI agent for Server-View"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "psutil>=7.1.3",
    "uvicorn[standard]>=0.38.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
